# mailmate-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/mailmate_mcp/: __init__.py  applescript.py  mailstore.py  server.py
