[project]
name = "mailmate-mcp"
version = "0.1.0"
description = "MCP server for MailMate — search, read, move, tag, and link local emails"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "hatchling>=1.29.0",
    "mcp>=1.26.0",
]

[project.scripts]
mailmate-mcp = "mailmate_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mailmate_mcp"]
